corrected letter spacing for go-hint-error

--- a/projects/go-lib/src/styles/_hints.scss
+++ b/projects/go-lib/src/styles/_hints.scss
@@ -25,7 +25,7 @@
 }
 
 .go-hint--error {
-  letter-spacing: 0.8pt;
+  letter-spacing: 0.08pt;
   padding-top: 0;
 
   &::before {
